plugins {
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

// Build timestamp used as version suffix (replaces -SNAPSHOT)
ext.buildTimestamp = new Date().format('yyyyMMddHHmmss')

subprojects {
    apply plugin: 'java'

    group = 'kr.springware'
    version = "1.0.0-${rootProject.ext.buildTimestamp}"

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    repositories {
        mavenCentral()
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}
